--- a/resume/index.html
+++ b/resume/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 ## Melissa Lanning
 #### 4628 SE 30TH AVE PORTLAND OR 97202
 #### (503) 804-6450 | melissalanning@gmail.com
@@ -63,3 +66,6 @@ Introduction to Technical Writing & Advanced Technical Writing
 
 * **Indiana University**, Bloomington, IN 1991-1995
 English
+
+</body>
+</html>
