--- a/resume/index.html
+++ b/resume/index.html
@@ -6,13 +6,14 @@
   <h4>(503) 804-6450 | melissalanning@gmail.com</h4>
   <h2>QUALIFICATIONS SUMMARY</h2>
   <p>20+ years of experience in enterprise client/server and networked systems documentation, support, and management.
-  8+ years of experience creating technical documentation.
+  <br>8+ years of experience creating technical documentation.</br>
   Technical domains include software development, networking, security, and analytics.
-  <em>Specializing in</em>
-  - Product documentation &amp; support, enterprise networking, security, and analytics hardware and software products.
-  - Audience and context-appropriate documentation.
-  - Agile development practices, team leadership and cross-functional collaboration.
-  - Requirements creation, quality assurance, and document development for complex enterprise-scale projects.</p>
+  <b>Specializing in</b>
+  <ul>Product documentation &amp; support, enterprise networking, security, and analytics hardware and software products.
+  <li>Audience and context-appropriate documentation.</li>
+  <li>Agile development practices, team leadership and cross-functional collaboration.</li>
+  <li>Requirements creation, quality assurance, and document development for complex enterprise-scale projects.</li>
+  </ul>
 
   <h2>PROFESSIONAL EXPERIENCE</h2>
 
@@ -62,8 +63,8 @@
 
   <h3>EDUCATION AND CERTIFICATIONS</h3>
   <ul>
-  <li><p><strong>UC Berkeley Extension</strong>, Berkeley, CA - 1998 <br />
-  Introduction to Technical Writing &amp; Advanced Technical Writing  </p></li>
+  <li><strong>UC Berkeley Extension</strong>, Berkeley, CA - 1998 <br />
+  Introduction to Technical Writing &amp; Advanced Technical Writing </li>
   <li><p><strong>Indiana University</strong>, Bloomington, IN 1991-1995 <br />
   English</p></li>
   </ul>
