--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
   <h2>QUALIFICATIONS SUMMARY</h2>
   <p>20+ years of experience in enterprise client/server and networked systems documentation, support, and management.
   <br>8+ years of experience creating technical documentation.</br>
-  Technical domains include software development, networking, security, and analytics.
+  <br>Technical domains include software development, networking, security, and analytics.</br>
   <b>Specializing in</b>
   <ul>Product documentation &amp; support, enterprise networking, security, and analytics hardware and software products.
   <li>Audience and context-appropriate documentation.</li>
