--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
 <body>
   <h2>Melissa Lanning</h2>
   <h4>4628 SE 30TH AVE PORTLAND OR 97202</h4>
-  <h4>(503) 804-6450 | <a href "mailto:melissalanning@gmail.com" melissalanning@gmail.com</a></h4>
+  <h4>(503) 804-6450 | <a href="mailto:melissalanning@gmail.com" melissalanning@gmail.com</a></h4>
   <h2>QUALIFICATIONS SUMMARY</h2>
   <p>20+ years of experience in enterprise client/server and networked systems documentation, support, and management.
   <br>8+ years of experience creating technical documentation.</br>
