--- a/resume/index.html
+++ b/resume/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <h2>Melissa Lanning</h2>
-  <h4>4628 SE 30TH AVE PORTLAND OR 97202</h4>
+  <h4>4628 SE 30TH AVE PORTLAND OR 97202
   <br>(503) 804-6450 <a href="mailto:melissalanning@gmail.com">melissalanning@gmail.com</a>
   </h4>
   <h2>QUALIFICATIONS SUMMARY</h2>
