--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>YEP</h1>
-<p>I'm another new, blank GitHub newb page, hosted with GitHub Pages.</p>
+<p>under construction - MIND THE GAP</p>
 </body>
 </html>
