--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <div id="header">
-
-    </div>
-<div id="content"></div>
-    <p>YEP - I'm another new, blank GitHub page, hosted with GitHub Pages.</p>
-</div>
-<div id="footer">
-
-</div>
+<h1>YEP</h1>
+<p>under construction - MIND THE GAP</p>
 </body>
 </html>
