--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>YEP</h1>
-<p>under construction - MIND THE GAP</p>
+<head>
+<link href="styles.css" rel="stylesheet" type="text/css" />
+<h1>Melissa Lanning</h1>
+<p><a href="/portfolio">My Portfolio</a></p>
+<footer>
+<p>Last Updated on October 4, 2019</p>
+</footer>
 </body>
 </html>
