add portfolio landing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <link href="styles.css" rel="stylesheet" type="text/css" />
 <h1>Melissa Lanning</h1>
-<p><a href="/portfolio">My Portfolio</a></p>
+<p><a href="/portfolio/index.html">My Portfolio</a></p>
 <footer>
 <p>Last Updated on October 4, 2019</p>
 </footer>
